WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300333
[World Leaks] Fix leaks in LayoutTests/imported/w3c/web-platform-tests/scroll-animations/
https://bugs.webkit.org/show_bug.cgi?id=300333
Summary
[World Leaks] Fix leaks in LayoutTests/imported/w3c/web-platform-tests/scroll...
Nipun Shukla
Reported
2025-10-07 11:24:12 PDT
rdar://162132950
Attachments
Add attachment
proposed patch, testcase, etc.
Nipun Shukla
Comment 1
2025-10-07 11:28:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51956
EWS
Comment 2
2025-10-22 10:20:46 PDT
Committed
301956@main
(56f36c24abfd): <
https://commits.webkit.org/301956@main
> Reviewed commits have been landed. Closing PR #51956 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug