[World Leaks] Fix leaks in LayoutTests/imported/w3c/web-platform-tests/scroll-animations/ https://bugs.webkit.org/show_bug.cgi?id=300333 rdar://162132950

Reviewed by Antoine Quint.

Change WebAnimation::stop() such that upon stopping a WebAnimation we also remove the effect
by calling setEffectInternal(nullptr). This fixes approximately 10 leaky tests.

Test: animations/animation-timeline-does-not-leak.html

* LayoutTests/animations/animation-timeline-does-not-leak-expected.txt: Added.
* LayoutTests/animations/animation-timeline-does-not-leak.html: Added.
* LayoutTests/animations/resources/animation-timeline-leak-test.html: Added.
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::stop):

Canonical link: https://commits.webkit.org/301956@main